--- a/css/perfil.css
+++ b/css/perfil.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background: linear-gradient(135deg, #4a148c 0%, #2c003e 100%);
+    background: linear-gradient(135deg, #ffffff 0%, #ffffff 100%);
     color: #333;
     min-height: 100vh;
 }
