actualizacion equipo de trabajo

--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -100,7 +100,7 @@
 }
 
 .equipo-grid {
-    display: grid;
+    display:inline-flex;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 25px;
 }
